...
              children: [
                // NumberGen(),
                // PowerOfTwo(calculator),
                TwoDigitOperation(
                  calculator: calculator,
                  operation: Operation.add,
                  topKey: 'top_add',
                  bottomKey: 'bottom_add',
                ),
                TwoDigitOperation(
                  calculator: calculator,
                  operation: Operation.subtract,
                  topKey: 'top_subtract',
                  bottomKey: 'bottom_subtract',
...
